# oracle

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  deny.toml  typos.toml
.github/: FUNDING.yml
.github/workflows/: check-pr.yml  ci.yml  release.yml
src/: crates_io.rs  lib.rs  main.rs
src/analyzer/: dependency.rs  mod.rs  parser.rs  registry.rs  types.rs
src/app/: mod.rs  state.rs
src/config/: mod.rs  settings.rs
src/error/: mod.rs
src/ui/: animation.rs  app.rs  dependency_view.rs  inspector.rs  mod.rs  search.rs  splash.rs
src/ui/app/: header.rs  layout.rs  list.rs  mod.rs  overlays.rs  right_panel.rs  status.rs  types.rs
src/ui/components/: list.rs  mod.rs  tabs.rs
src/ui/theme/: mod.rs
src/utils/: crate_check.rs  mod.rs  path.rs  text.rs
